--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <title>hi, world!</title>
+    <title>Mage Wars Deck Builder</title>
   </head>
   <body>
     <div id="app" class="container">
