--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic' rel='stylesheet' type='text/css'>
     <title>Mage Wars Deck Builder</title>
   </head>
   <body>
+    <div class="buy">
+      <a href="http://amzn.to/1eVjBgA" target="_blank">Buy Mage Wars on Amazon</a>
+    </div>
     <div id="app" class="container">
       <div id="secondary-pane">
         <div id="mage"></div>
