--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic' rel='stylesheet' type='text/css'>
-    <title>Mage Wars Deck Builder</title>
+    <title>Mage Wars Spellbook Builder</title>
   </head>
   <body>
     <div class="buy">
